tdf#115269: fix crash when changing horizontal align (reportdesign)

See bt:
https://bugs.documentfoundation.org/attachment.cgi?id=139403

Regression from
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=00657aef09d854c74fb426a935a3e8b1fc390bb0

Change-Id: Id23dbbec7dd93a603d906b5d8f7bbf74d14e1d65
Reviewed-on: https://gerrit.libreoffice.org/48765
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>